calculate gas and relayer fee

--- a/.example.env
+++ b/.example.env
@@ -2,19 +2,28 @@ PRIVATE_KEY=
 
 # Ethereum
 RPC_PROVIDER_1=
+WS_RPC_PROVIDER_1=
 # Optimism
 RPC_PROVIDER_10=
+WS_RPC_PROVIDER_10=
 # BSC
 RPC_PROVIDER_56=
+WS_RPC_PROVIDER_56=
 # Polygon
 RPC_PROVIDER_137=
+WS_RPC_PROVIDER_137=
 # zksync
 RPC_PROVIDER_324=
+WS_RPC_PROVIDER_324=
 # Base
 RPC_PROVIDER_8453=
+WS_RPC_PROVIDER_8453=
 # Arbitrum
 RPC_PROVIDER_42161=
+WS_RPC_PROVIDER_42161=
 # Linea
 RPC_PROVIDER_59144=
+WS_RPC_PROVIDER_59144=
 # Blast
 RPC_PROVIDER_81457=
+WS_RPC_PROVIDER_81457=
